# bulkclix-mcp

./: .dockerignore  Dockerfile  README.md  app.py  auth.py  auth_provider.py  config.py  db.py  decorators.py  docker-compose.yml  http_client.py  pyproject.toml  requirements.txt  server.py
integrations/yango/: tools.py  widget.py
payments/: helpers.py  tools.py
tools/: account.py  airtime.py  bank.py  contacts.py  data_bundles.py  food_orders.py  kyc.py  otp.py  sms.py  whatsapp.py
vendors/: menu.py  registry.py  tools.py
